# dummy-repository-service

./: Dockerfile  README.md  pyproject.toml
conf/: settings.toml
resources/linkset/: 1.json
src/: commons.py  db.py  main.py  pages.py  protected.py  public.py
