[tool.poetry]
name = "dummy-repository-service"
version = "0.1.3"
description = ""
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
readme = "README.md"
include = ["resources/*", "logs/*", "conf/*", "data/*", "pages-templates/*", "static/*"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.6"
uvicorn = "^0.20.0"
dynaconf = "^3.1.11"
fastapi = "^0.88.0"
rdflib = "^6.3.2"
rdflib-jsonld = "^0.6.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
